[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/DynamicFonts/ClothesEnglish.tres" type="DynamicFont" id=1]
[ext_resource path="res://PlacehoolderSprites/BG2.png" type="Texture" id=2]
[ext_resource path="res://ObjectScenes/QuizBOption.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Weather/Sunny.png" type="Texture" id=4]
[ext_resource path="res://ObjectScenes/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://DisplayScenes/QuizB.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Buttons/Submit.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Buttons/SubmitHover.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Buttons/Next.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/NextHover.png" type="Texture" id=10]
[ext_resource path="res://ObjectScenes/InOverlay.tscn" type="PackedScene" id=11]
[ext_resource path="res://ObjectScenes/QuizHelpPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://Fonts/ProductSans-Bold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://PlacehoolderSprites/Answer_Correct.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
outline_color = Color( 0.298039, 0.317647, 0.858824, 1 )
font_data = ExtResource( 13 )

[node name="QuizB" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 720.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 370.0
alignment = 1

[node name="WeatherIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 38.0
margin_right = 338.0
margin_bottom = 350.0
rect_min_size = Vector2( 300, 350 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 342.0
margin_right = 1242.0
margin_bottom = 350.0
alignment = 1

[node name="Question" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 85.0
margin_right = 900.0
margin_bottom = 265.0
rect_min_size = Vector2( 900, 180 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Which clothes do you wear in [color=yellow]Sunny[/color] weather?"
text = "Which clothes do you wear in Sunny weather?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 374.0
margin_right = 1280.0
margin_bottom = 588.0
alignment = 1

[node name="Option1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 496.0
margin_bottom = 214.0

[node name="Option2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 500.0
margin_right = 780.0
margin_bottom = 214.0
uid = 1

[node name="Option3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 784.0
margin_right = 1064.0
margin_bottom = 214.0
uid = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 592.0
margin_right = 1280.0
margin_bottom = 700.0
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Submit" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
margin_left = 535.0
margin_right = 744.0
margin_bottom = 108.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Next" type="TextureButton" parent="VBoxContainer/HBoxContainer3"]
visible = false
margin_left = 642.0
margin_right = 851.0
margin_bottom = 108.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Stats" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 19.0
margin_top = 24.0
margin_right = 257.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "Correct Answers:
0
Answered Questions:
0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Results" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -9.0
margin_right = -102.0
margin_bottom = 91.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 5 )]
targetScene = "QuizMenu"

[node name="QuizHelpPopup" parent="." instance=ExtResource( 12 )]
visible = false

[node name="Overlay" parent="." instance=ExtResource( 11 )]
visible = false

[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Submit" to="." method="_on_Submit_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer3/Next" to="." method="_on_Next_button_down"]
